scss/style.scss
$transition: all .4s ease;

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  background-image: url('../jpg/bcg.png');
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  font-family: 'Montserrat',
  sans-serif;
  color: white;
  overflow-y: scroll;
}
body::-webkit-scrollbar{
  width: 10px;
  background-color: rgb(0, 0, 0);
}
body::-webkit-scrollbar-thumb{
  background-color: rgba(110, 110, 110, 0.521);
  border-radius: 5px;
}
.rules{
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-height: 150vh;
  .rule-section{
    margin: 10px 0;
    transition: $transition;
  }
}
.rule-section{
  width: 900px;
  height: 40px;
  background-color: rgba(54, 54, 54, 0.521);
  border-radius: 8px;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  ul{
    width: 90%;
    padding: 10px 0;
    transform: scaleY(0);
    transition: $transition;
    transform-origin: 0 0;
    list-style-type: decimal;
    text-align: start;
    opacity: 0;
  }
}
.rules-mainly{
  height: 140px;
  ul{
    transform: scaleY(1);
    opacity: 1;
  }
}
.rules-admins{
  height: 250px;
  ul {
    transform: scaleY(1);
    opacity: 1;
  }
}
.rules-player{
  height: 530px;
  ul {
    transform: scaleY(1);
    opacity: 1;
  }
}
.rules-chat{
  height: 210px;
  ul {
    transform: scaleY(1);
    opacity: 1;
  }
}
.rules-ranks{
  height: 100px;
  ul {
    transform: scaleY(1);
    opacity: 1;
  }
}

@media screen and (max-width: 991px) {
  .rule-section{
    width: 700px;
    ul{
      font-size: 14px;
    }
  }
}
@media screen and (max-width: 767px) {
  .rule-section{
    width: 500px;
  }
  .rules-mainly{
    height: 160px;
  }
  .rules-admins{
    height: 280px;
  }
  .rules-player{
    height: 620px;
  }
  .rules-chat{
    height: 250px;
  }
}
@media screen and (max-width: 575px) {
  .rule-section{
    width: 90%;
    ul{
      font-size: 12px;
    }
  }
}
@media screen and (max-width: 460px) {
  .rules-mainly {
    height: 200px;
  }

  .rules-admins {
    height: 300px;
  }

  .rules-player {
    height: 650px;
  }

  .rules-chat {
    height: 250px;
  }
}
@media screen and (max-width: 380px) {
  .rule-section{
    width: 98%;
    padding-left: 2px;
    ul{
      font-size: 11px;
    }
  }
}

